# tots

./: .gitignore  CMakeLists.txt  Doxyfile  behavior.h  bitmask.cpp  bitmask.h  cmake_windows.bat  entity.cpp  level.cpp  level.h  luaFunctions.h  main.cpp  movement.cpp  movement.h  opengl_entry_points.pl  opengl_entry_points.txt  path.cpp  path.h  path_working.cpp  path_working.h  player.cpp  quadNode.h  sprite.cpp  world.cpp  world.h
documentation/plantuml/: doxygenColors.iuml
prototype/: main.lua
src/: CMakeLists.txt  barrier.h  behavior.cpp  behavior.h  common.h  enemy.cpp  entity.cpp  entity.h  level.cpp  log.cpp  log.h  luaFunctions.cpp  main.cpp  opengl.cpp  opengl.h  path.cpp  path.h  player.h  playerMovement.cpp  playerMovement.h  playerState.cpp  playerState.h  quadNode.cpp  sprite.h  world.cpp
src.old/: CMakeLists.txt  behavior.cpp  enemy.h  entity.cpp  level.h  luaFunctions.cpp  pathAbsolute.cpp  playerState.h  sprite.h  world.h
src/framework/: CMakeLists.txt  component.h  event.cpp  event.h  eventQueue.cpp  eventQueue.h  framework.dox  gameLoop.cpp  gameLoop.h  gameState.cpp  gameState.h  hoggedThread.cpp  hoggedThread.h  message.cpp  message.h  messageQueue.cpp  messageQueue.h  subsystem.cpp  subsystem.h  subsystemThread.cpp  subsystemThread.h  task.cpp  task.h  taskQueue.cpp  taskQueue.h  threadPool.cpp  threadPool.h  threadSignal.cpp  threadSignal.h  workerThread.cpp  workerThread.h
src/framework/tests/: .gitignore  CMakeLists.txt  gameLoop.cpp  main.cpp  subsystem.h
src/graphics/: CMakeLists.txt  component.cpp  component.h  graphics.cpp  graphics.h  logging.cpp  logging.h  opengl.cpp  opengl.h  triangle.cpp  triangle.h
src/levels/: level01.lua
src/logging/: CMakeLists.txt  log.cpp  log.h  logging.cpp  logging.h
src/physics/: CMakeLists.txt  physics.cpp  physics.h
src/shaders/: simple.frag  simple.vert
src/subsystem/: aggregateQueue.cpp  aggregateQueue.h  component.h  event.cpp  event.h  eventQueue.cpp  gameLoop.cpp  gameLoop.h  gameState.h  hoggedThread.cpp  hoggedThread.h  subsystem.cpp  subsystem.h  subsystemThread.cpp  subsystemThread.h  threadPool.cpp  threadPool.h  workerThread.cpp  workerThread.h
src/utility/: CMakeLists.txt  aggregateQueue.cpp  aggregateQueue.h  crc32.cpp  crc32.h  priorityQueue.h  staticMap.h  stringId.h  variant.cpp  variant.h
src/utility/tests/: .gitignore  CMakeLists.txt  main.cpp  priorityQueue.cpp
